# coolgame_admin

./: main.py  pyproject.toml  test_main.http
app/config/: database.py  schemas.py  settings.py
app/infrastructure/: crypto_utils.py  utils.py
app/repositories/: repository.py
app/routers/: activation_info.py  auth.py  client_info.py  codes.py  email_account.py  games.py  psn_account.py  rental_info.py
app/services/: activation_service.py  client_info.py  code_service.py  email_service.py  game_service.py  psn_service.py  rental_info_service.py
app/templates/: admin.html  login.html
