[tool.poetry]
name = "coolgame-admin"
version = "0.1.0"
description = ""
authors = ["Svetlov-al <s3t1qs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.24.0.post1"
motor = "^3.3.2"
jinja2 = "^3.1.2"
passlib = "^1.7.4"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
bcrypt = "^4.1.1"
email-validator = "^2.1.0.post1"
python-dotenv = "^1.0.0"
jose = "^1.0.0"
fastapi = "^0.105.0"
cryptography = "^41.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
